# LiveMirror

./: .env.example  .env.staging.example  .gitignore  DOCUMENTATION_INDEX.md  Dockerfile  GRACEFUL_DEGRADATION_EXPLAINED.md  HANDOFF_FUSION_INTEGRATION.md  PLAN_MAX_LEVEL_EXECUTION.md  README.md  TRIBE_V2_12WEEK_EXECUTION_COMMITMENT.md  TRIBE_V2_MAX_LEVEL_ROADMAP.md  docker-compose.staging.yml  docker-compose.yml  moltbook_credentials.json  moltbook_swarm_credentials.json  package.json  pytest.ini
.collab/: DECISIONS.md  HANDOFF.md  STATUS.md
.ownership/: CODEOWNERS.md
backend/: pyproject.toml  req_no_gensim.txt  requirements.txt  run.py
backend/.claude-flow/data/: pending-insights.jsonl
backend/app/: __init__.py  main.py
backend/app/api/: health.py  ingest.py  logs.py  metrics.py  predict.py  simulate.py  stream.py
backend/app/services/: experiments.py
backend/self_mirror/: __init__.py  agent_logic.py  main.py  secrets_manager.py  security.py  services.py
config/: nginx.conf
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: COMPREHENSIVE_SUMMARY.md  DOCUMENTATION_INDEX.md  HANDOFF_FUSION_INTEGRATION.md  PROJECT_AIM_AND_ARCHITECTURE.md  TRIBE_V2_12WEEK_EXECUTION_COMMITMENT.md  TRIBE_V2_FUSION_IMPLEMENTATION.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
k8s/: backend-deployment.yaml  frontend-deployment.yaml  redis-deployment.yaml
scripts/: agent_interact.py  bootstrap_kaggle.py  check_platforms.py  deploy-staging.sh  orchestrator.py  quickstart.sh  register_moltbook.py  setup_oci.sh  test_bluesky_fix.py  (+4 more)
(+181 files in other folders)
