[project]
name = "livemirror"
version = "0.1.0"
description = "Real-time self-calibrating prediction engine"
requires-python = ">=3.11,<=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "networkx>=3.0",
    "crawl4ai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
